recursion.cons.butlast.ButLast.scala.error
Compilation error:
ButLast:6: error: type mismatch;
 found   : List[Int]
 required: Int
    return butLast(l.tail)::l.tail
                          ^